--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
+    <title>Loan Calculator</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -76,9 +76,9 @@
 
         /* Custom Form Styling */
         .calculator-form {
-            max-width: 400px;
+            max-width: 500px;
             margin: 50px auto;
-            padding: 20px;
+            padding: 30px;
             background-color: #fff;
             border-radius: 10px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
@@ -89,13 +89,13 @@
             border: 1px solid #ced4da;
         }
 
-        .form-check-label {
-            font-size: 0.9rem;
+        .form-group {
+            margin-bottom: 1.5rem;
         }
 
         .btn-calculate, .btn-clear {
             width: 100%;
-            padding: 10px;
+            padding: 12px;
             border-radius: 8px;
         }
 
@@ -111,14 +111,14 @@
             border: 1px solid #ced4da;
         }
 
-        .logo {
+        .result {
             text-align: center;
-            margin-bottom: 20px;
+            font-size: 1.2rem;
+            font-weight: bold;
+            margin-top: 20px;
+            display: none;
         }
 
-        .logo img {
-            width: 50px;
-        }
     </style>
 </head>
 <body>
@@ -159,40 +159,38 @@
     <!-- Loan Calculator Form -->
     <div class="container">
         <div class="calculator-form">
-        
-            <form>
+            <form id="loanForm">
                 <div class="form-group">
                     <label for="loanAmount">Loan Amount</label>
-                    <input type="text" class="form-control" id="loanAmount" placeholder="0.00">
-                </div>
-
-                <div class="form-group form-check">
-                    <input type="checkbox" class="form-check-input" id="includeFee">
-                    <label class="form-check-label" for="includeFee">Include initiation fee in your home loan?</label>
+                    <input type="number" class="form-control" id="loanAmount" placeholder="Enter loan amount" required min="1000">
                 </div>
 
                 <div class="form-group">
-                    <label for="interestRate">Interest Rate %</label>
-                    <input type="text" class="form-control" id="interestRate" placeholder="11.75">
+                    <label for="interestRate">Interest Rate (%)</label>
+                    <input type="number" class="form-control" id="interestRate" placeholder="Enter interest rate" required min="1" step="0.01">
                 </div>
 
                 <div class="form-group">
-                    <label for="loanTerm">Loan Term in Months</label>
-                    <input type="text" class="form-control" id="loanTerm" value="240" disabled>
+                    <label for="loanTerm">Loan Term (in months)</label>
+                    <input type="number" class="form-control" id="loanTerm" placeholder="Enter loan term" required min="1">
                 </div>
 
                 <div class="form-group">
-                    <label for="additionalPayments">Additional monthly payments</label>
+                    <label for="additionalPayments">Additional Monthly Payments</label>
                     <select class="form-control" id="additionalPayments">
-                        <option value="">None</option>
+                        <option value="0">None</option>
                         <option value="100">100</option>
                         <option value="200">200</option>
                     </select>
                 </div>
 
-                <button type="button" class="btn btn-calculate mb-2">Calculate</button>
+                <button type="button" class="btn btn-calculate mb-2" onclick="calculateLoan()">Calculate</button>
                 <button type="reset" class="btn btn-clear">Clear</button>
             </form>
+            
+            <div class="result" id="result">
+                Monthly Payment: $<span id="monthlyPayment"></span>
+            </div>
         </div>
     </div>
 
@@ -210,7 +208,7 @@
                 </div>
             </div>
             <hr class="my-4">
-            <p class="mb-0">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+            <p class="mb-0">Loan Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
         </div>
     </footer>
 
@@ -226,7 +224,26 @@
         toggler.addEventListener('click', () => {
             toggler.classList.toggle('collapsed');
         });
-    </script>
 
+        // Loan Calculator Logic
+        function calculateLoan() {
+            const loanAmount = parseFloat(document.getElementById('loanAmount').value);
+            const interestRate = parseFloat(document.getElementById('interestRate').value) / 100 / 12;
+            const loanTerm = parseInt(document.getElementById('loanTerm').value);
+            const additionalPayments = parseFloat(document.getElementById('additionalPayments').value);
+
+            if (!loanAmount || !interestRate || !loanTerm) {
+                alert("Please fill in all fields correctly.");
+                return;
+            }
+
+            // Calculate monthly payment
+            const monthlyPayment = (loanAmount * interestRate) / (1 - Math.pow(1 + interestRate, -loanTerm)) + additionalPayments;
+
+            // Show result
+            document.getElementById('monthlyPayment').innerText = monthlyPayment.toFixed(2);
+            document.getElementById('result').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
