--- a/forms.html
+++ b/forms.html
@@ -9,66 +9,36 @@
     <style>
         /* Custom Styling */
         body {
-            background-color: #f5f7fa;
+            background-color: #f0f2f5;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
+
         .navbar {
             background-color: #ffffff;
             padding: 1rem;
-        }
-        .navbar-brand img {
-            height: 40px;
-        }
-        footer {
-            background-color: #343a40;
-            color: #ffffff;
-            padding: 2rem 0;
-            text-align: center;
-        }
-        footer .footer-links a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 1rem;
-        }
-        footer .footer-links a:hover {
-            text-decoration: underline;
-        }
-        footer .social-icons a {
-            color: #ffffff;
-            font-size: 1.5rem;
-            margin: 0 10px;
-        }
-        footer .social-icons a:hover {
-            color: #17a2b8;
-        }
-        .navbar-nav {
-            flex-grow: 1;
-            justify-content: center;
-        }
-        .navbar h1 {
-            font-size: 1.5rem;
-            margin: 0;
-            font-weight: bold;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         }
 
-        /* Custom Form Styling */
+        .navbar h1 {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: #000;
+        }
+
+        /* Loan Calculator Form Styling */
         .calculator-form {
-            max-width: 500px;
+            max-width: 450px;
             margin: 50px auto;
-            padding: 30px;
+            padding: 25px;
             background-color: #fff;
-            border-radius: 10px;
+            border-radius: 15px;
             box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
 
         .form-control {
-            border-radius: 8px;
+            border-radius: 10px;
+            margin-bottom: 15px;
             border: 1px solid #ced4da;
-        }
-
-        .form-group {
-            margin-bottom: 1.5rem;
         }
 
         .btn-calculate, .btn-clear {
@@ -78,9 +48,13 @@
         }
 
         .btn-calculate {
-            background-color: #000;
+            background-color: #007bff;
             color: #fff;
             border: none;
+        }
+
+        .btn-calculate:hover {
+            background-color: #0056b3;
         }
 
         .btn-clear {
@@ -88,40 +62,34 @@
             color: #000;
             border: 1px solid #ced4da;
         }
+
+        .btn-clear:hover {
+            background-color: #e2e6ea;
+        }
+
+        footer {
+            background-color: #343a40;
+            color: #ffffff;
+            padding: 1.5rem 0;
+            text-align: center;
+            margin-top: 50px;
+        }
+
+        footer p {
+            margin: 0;
+            font-size: 0.9rem;
+        }
     </style>
 </head>
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+                <img src="img/logo.png" alt="Logo" height="40"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-            </button>
-        </div>
-
-        <!-- Centered Navbar Links -->
-        <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav mx-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Loans</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
         </div>
     </nav>
 
@@ -130,7 +98,7 @@
         <div class="calculator-form">
             <form id="loanForm">
                 <div class="form-group">
-                    <label for="loanAmount">Loan Amount</label>
+                    <label for="loanAmount">Loan Amount (in USD)</label>
                     <input type="number" class="form-control" id="loanAmount" placeholder="Enter loan amount" required min="1000">
                 </div>
 
@@ -142,15 +110,6 @@
                 <div class="form-group">
                     <label for="loanTerm">Loan Term (in months)</label>
                     <input type="number" class="form-control" id="loanTerm" placeholder="Enter loan term" required min="1">
-                </div>
-
-                <div class="form-group">
-                    <label for="additionalPayments">Additional Monthly Payments</label>
-                    <select class="form-control" id="additionalPayments">
-                        <option value="0">None</option>
-                        <option value="100">100</option>
-                        <option value="200">200</option>
-                    </select>
                 </div>
 
                 <button type="button" class="btn btn-calculate mb-2" onclick="calculateLoan()">Calculate</button>
@@ -180,41 +139,18 @@
 
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>Follow Us</h5>
-                    <div class="social-icons">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
-                        <a href="#"><i class="bi bi-twitter"></i></a>
-                        <a href="#"><i class="bi bi-linkedin"></i></a>
-                    </div>
-                </div>
-            </div>
-            <hr class="my-4">
-            <p class="mb-0">Loan Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
-        </div>
+        <p>Loan Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
     </footer>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
-    <!-- Custom Script -->
+    <!-- Loan Calculator Script -->
     <script>
-        // Toggle animation for hamburger icon
-        const toggler = document.querySelector('.navbar-toggler');
-        toggler.addEventListener('click', () => {
-            toggler.classList.toggle('collapsed');
-        });
-
-        // Loan Calculator Logic
         function calculateLoan() {
             const loanAmount = parseFloat(document.getElementById('loanAmount').value);
             const interestRate = parseFloat(document.getElementById('interestRate').value) / 100 / 12;
             const loanTerm = parseInt(document.getElementById('loanTerm').value);
-            const additionalPayments = parseFloat(document.getElementById('additionalPayments').value);
 
             if (!loanAmount || !interestRate || !loanTerm) {
                 alert("Please fill in all fields correctly.");
@@ -222,7 +158,7 @@
             }
 
             // Calculate monthly payment
-            const monthlyPayment = (loanAmount * interestRate) / (1 - Math.pow(1 + interestRate, -loanTerm)) + additionalPayments;
+            const monthlyPayment = (loanAmount * interestRate) / (1 - Math.pow(1 + interestRate, -loanTerm));
 
             // Display result in the modal
             document.getElementById('monthlyPayment').innerText = monthlyPayment.toFixed(2);
