--- a/forms.html
+++ b/forms.html
@@ -67,6 +67,7 @@
             background-color: #e2e6ea;
         }
 
+        /* Footer Styling */
         footer {
             background-color: #343a40;
             color: #ffffff;
@@ -78,6 +79,32 @@
         footer p {
             margin: 0;
             font-size: 0.9rem;
+        }
+
+        /* Modal Close Button Animation */
+        .btn-close {
+            background-color: transparent;
+            border: 0;
+            padding: 0;
+            cursor: pointer;
+        }
+
+        .btn-close::before {
+            content: '\00D7'; /* Unicode for 'X' symbol */
+            font-size: 1.5rem;
+            color: #000;
+            display: inline-block;
+            transition: transform 0.3s ease;
+        }
+
+        .btn-close:hover::before {
+            transform: rotate(180deg);
+            color: #ff0000;
+        }
+
+        .modal-content {
+            border-radius: 15px;
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
