--- a/bond.html
+++ b/bond.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bond Calculator</title>
+    <title>Bond and Loan Calculator</title>
     
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/bond.css">
+    <link rel="stylesheet" href="assets/css/calculator.css">
 </head>
 <body>
 
@@ -16,7 +17,7 @@
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+                <img src="img/logo.png" alt="Logo">
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +46,53 @@
         </div>
     </nav>
 
+    <!-- Calculator Form -->
+    <div class="container mt-5">
+        <div class="calculator-container">
+            <h2>Choose Calculator</h2>
+            <select id="calculatorType" class="form-select mb-4" aria-label="Calculator Type">
+                <option value="bond">Bond Calculator</option>
+                <option value="loan">Loan Calculator</option>
+            </select>
+
+            <!-- Bond Calculator Form -->
+            <form id="bondCalculator" class="calculator-form">
+                <div class="mb-3">
+                    <label for="bondAmount" class="form-label">Bond Amount</label>
+                    <input type="number" id="bondAmount" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="interestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="number" id="interestRate" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="years" class="form-label">Years</label>
+                    <input type="number" id="years" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Calculate Bond</button>
+                <div id="bondResult" class="mt-3"></div>
+            </form>
+
+            <!-- Loan Calculator Form (Initially hidden) -->
+            <form id="loanCalculator" class="calculator-form d-none">
+                <div class="mb-3">
+                    <label for="loanAmount" class="form-label">Loan Amount</label>
+                    <input type="number" id="loanAmount" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
+                    <input type="number" id="loanInterestRate" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="loanYears" class="form-label">Loan Term (Years)</label>
+                    <input type="number" id="loanYears" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary w-100">Calculate Loan</button>
+                <div id="loanResult" class="mt-3"></div>
+            </form>
+        </div>
+    </div>
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -70,6 +118,7 @@
 
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
+    <script src="assets/js/calculator.js"></script>
 
 </body>
 </html>
