--- a/bond.html
+++ b/bond.html
@@ -59,38 +59,54 @@
             <form id="bondCalculator" class="calculator-form">
                 <div class="mb-3">
                     <label for="bondAmount" class="form-label">Bond Amount</label>
-                    <input type="number" id="bondAmount" class="form-control" required>
+                    <input type="text" id="bondAmount" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="interestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="interestRate" class="form-control" required>
+                    <input type="number" id="interestRate" step="0.01" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="years" class="form-label">Years</label>
                     <input type="number" id="years" class="form-control" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Calculate Bond</button>
-                <div id="bondResult" class="mt-3"></div>
             </form>
 
             <!-- Loan Calculator Form (Initially hidden) -->
             <form id="loanCalculator" class="calculator-form d-none">
                 <div class="mb-3">
                     <label for="loanAmount" class="form-label">Loan Amount</label>
-                    <input type="number" id="loanAmount" class="form-control" required>
+                    <input type="text" id="loanAmount" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="loanInterestRate" class="form-control" required>
+                    <input type="number" id="loanInterestRate" step="0.01" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="loanYears" class="form-label">Loan Term (Years)</label>
                     <input type="number" id="loanYears" class="form-control" required>
                 </div>
                 <button type="submit" class="btn btn-primary w-100">Calculate Loan</button>
-                <div id="loanResult" class="mt-3"></div>
             </form>
         </div>
+    </div>
+
+    <!-- Modal for Result Display -->
+    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modalResult">
+            <!-- Results will be displayed here -->
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
@@ -113,9 +129,6 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap Icons CDN -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
-
     <!-- Custom JS -->
     <script src="assets/js/bond.js"></script>
     <script src="assets/js/calculator.js"></script>
