--- a/bond.html
+++ b/bond.html
@@ -117,7 +117,7 @@
         </div>
       </div>
     </div>
-
+<hr class=""</hr>
     <!-- Footer -->
     <footer>
         <div class="container">
