--- a/bond.html
+++ b/bond.html
@@ -78,7 +78,7 @@
                         <option value="yearly">Yearly</option>
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Calculate Bond</button>
+                <button type="submit" class="btn btn-dark w-100">Calculate Bond</button>
             </form>
 
             <!-- Loan Calculator Form (Initially hidden) -->
@@ -95,7 +95,7 @@
                     <label for="loanYears" class="form-label">Loan Term (Years)</label>
                     <input type="number" id="loanYears" class="form-control" required>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Calculate Loan</button>
+                <button type="submit" class="btn btn-dark w-100">Calculate Loan</button>
             </form>
         </div>
     </div>
@@ -112,16 +112,16 @@
             <!-- Results will be displayed here -->
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
     </div>
-<hr class=""</hr>
+
     <!-- Footer -->
     <footer>
-        <div class="container">
-            <p class="mb-0">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+        <div class="container text-center">
+            <p class="mb-0 small">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
         </div>
     </footer>
 
