--- a/bond.html
+++ b/bond.html
@@ -47,83 +47,88 @@
     </nav>
 
     <!-- Calculator Form -->
-    <div class="container mt-5">
-        <div class="calculator-container">
-            <h2>Choose Calculator</h2>
-            <select id="calculatorType" class="form-select mb-4" aria-label="Calculator Type">
+    <div class="container calculator-container mt-5 mb-5">
+    <!-- Form for selecting between calculators -->
+    <form id="calculatorForm" class="calculator-form">
+        <div class="form-group">
+            <label for="calculatorType">Select Calculator</label>
+            <select class="form-control" id="calculatorType">
                 <option value="bond">Bond Calculator</option>
                 <option value="loan">Loan Calculator</option>
             </select>
-
-            <!-- Bond Calculator Form -->
-            <form id="bondCalculator" class="calculator-form">
-                <div class="mb-3">
-                    <label for="bondAmount" class="form-label">Bond Amount</label>
-                    <input type="text" id="bondAmount" class="form-control amount-input" required>
-                </div>
-                <div class="mb-3">
-                    <label for="interestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="interestRate" step="0.01" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="years" class="form-label">Years</label>
-                    <input type="number" id="years" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="interestFrequency" class="form-label">Interest Payment Frequency</label>
-                    <select id="interestFrequency" class="form-select" required>
-                        <option value="monthly">Monthly</option>
-                        <option value="quarterly">Quarterly</option>
-                        <option value="semi-annually">Semi-Annually</option>
-                        <option value="yearly">Yearly</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-dark w-100">Calculate Bond</button>
-            </form>
-
-            <!-- Loan Calculator Form (Initially hidden) -->
-            <form id="loanCalculator" class="calculator-form d-none">
-                <div class="mb-3">
-                    <label for="loanAmount" class="form-label">Loan Amount</label>
-                    <input type="text" id="loanAmount" class="form-control amount-input" required>
-                </div>
-                <div class="mb-3">
-                    <label for="loanInterestRate" class="form-label">Interest Rate (%)</label>
-                    <input type="number" id="loanInterestRate" step="0.01" class="form-control" required>
-                </div>
-                <div class="mb-3">
-                    <label for="loanYears" class="form-label">Loan Term (Years)</label>
-                    <input type="number" id="loanYears" class="form-control" required>
-                </div>
-                <button type="submit" class="btn btn-dark w-100">Calculate Loan</button>
-            </form>
         </div>
-    </div>
+        
+        <!-- Bond Calculator Fields -->
+        <div id="bondCalculatorFields">
+            <h4 class="mt-4">Bond Calculator</h4>
+            <div class="form-group">
+                <label for="bondAmount">Bond Amount (TZS)</label>
+                <input type="text" class="form-control" id="bondAmount" placeholder="Enter Bond Amount">
+            </div>
+            <div class="form-group">
+                <label for="bondInterestRate">Interest Rate (%)</label>
+                <input type="text" class="form-control" id="bondInterestRate" placeholder="Enter Interest Rate">
+            </div>
+            <div class="form-group">
+                <label for="bondYears">Years</label>
+                <input type="text" class="form-control" id="bondYears" placeholder="Enter Duration (Years)">
+            </div>
+            <div class="form-group">
+                <label for="bondFrequency">Interest Paid</label>
+                <select class="form-control" id="bondFrequency">
+                    <option value="monthly">Monthly</option>
+                    <option value="quarterly">Quarterly</option>
+                    <option value="semi-annually">Semi-annually</option>
+                    <option value="yearly">Yearly</option>
+                </select>
+            </div>
+        </div>
 
-    <!-- Modal for Result Display -->
-    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered">
+        <!-- Loan Calculator Fields (hidden by default) -->
+        <div id="loanCalculatorFields" style="display: none;">
+            <h4 class="mt-4">Loan Calculator</h4>
+            <div class="form-group">
+                <label for="loanAmount">Loan Amount (TZS)</label>
+                <input type="text" class="form-control" id="loanAmount" placeholder="Enter Loan Amount">
+            </div>
+            <div class="form-group">
+                <label for="loanInterestRate">Interest Rate (%)</label>
+                <input type="text" class="form-control" id="loanInterestRate" placeholder="Enter Interest Rate">
+            </div>
+            <div class="form-group">
+                <label for="loanYears">Years</label>
+                <input type="text" class="form-control" id="loanYears" placeholder="Enter Duration (Years)">
+            </div>
+        </div>
+
+        <!-- Buttons -->
+        <button type="submit" class="btn btn-dark mt-4">Calculate</button>
+        <button type="button" class="btn btn-secondary mt-4 ml-2" id="clearFormBtn">Clear</button>
+    </form>
+</div>
+
+<!-- Footer -->
+<footer>
+    <p>Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
+</footer>
+
+<!-- Modal for displaying results -->
+<div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
         <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body" id="modalResult">
-            <!-- Results will be displayed here -->
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          </div>
+            <div class="modal-header">
+                <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body" id="modalResult">
+                <!-- Calculation results will be displayed here -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
         </div>
-      </div>
     </div>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p class="mb-0 small">Bond Calculator &copy; 2024 Safe Bank Plc. All rights reserved.</p>
-        </div>
-    </footer>
+</div>
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
