--- a/bond.html
+++ b/bond.html
@@ -63,15 +63,15 @@
             <h4 class="mt-4">Bond Calculator</h4>
             <div class="form-group mb-3">
                 <label for="bondAmount">Bond Amount (TZS)</label>
-                <input type="text" class="form-control" id="bondAmount" placeholder="Enter Bond Amount">
+                <input type="tel" class="form-control" id="bondAmount" placeholder="Enter Bond Amount">
             </div>
             <div class="form-group mb-3">
                 <label for="bondInterestRate">Interest Rate (%)</label>
-                <input type="text" class="form-control" id="bondInterestRate" placeholder="Enter Interest Rate">
+                <input type="tel" class="form-control" id="bondInterestRate" placeholder="Enter Interest Rate">
             </div>
             <div class="form-group mb-3">
                 <label for="bondYears">Years</label>
-                <input type="text" class="form-control" id="bondYears" placeholder="Enter Duration (Years)">
+                <input type="tel" class="form-control" id="bondYears" placeholder="Enter Duration (Years)">
             </div>
             <div class="form-group mb-3">
                 <label for="bondFrequency">Interest Paid</label>
