--- a/bond.html
+++ b/bond.html
@@ -13,15 +13,17 @@
 </head>
 <body>
 
-    <!-- Top Navbar -->
+        <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-        <div class="container-fluid">
+        <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo" class="img-fluid" style="max-height: 50px;">
+                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span></span>
+                <span></span>
+                <span></span>
             </button>
         </div>
 
